# evolve-tsp-heuristics

./: .gitignore  readme.md  test_evolve_heuristics.cpp
data/: bayg29.tsp  berlin52.tsp  brazil58.tsp  burma14.tsp  ch130.tsp  ch150.tsp  d1291.tsp  d15112.tsp  d18512.tsp  d198.tsp  eil101.tsp  eil51.tsp  eil76.tsp  kroA100.tsp  lin105.tsp
papers/: readme.md
test/: readme.txt  test_evolve_heuristics.cpp
train/: I_operations.cpp  I_operations.hpp  bier127.tsp  config.cpp  config.hpp  evolve_tsp.cpp  evolve_tsp_threads.cpp  genetic_mep.cpp  genetic_mep.hpp
train/mpi/: CMakeLists.txt  config.txt  evolve_tsp_mpi_threads.cpp  run_config.txt  tst_log.txt
train/mpi/Debug/: mpi
train/mpi/data/: a280.tsp
train/multi thread/: evolve_tsp_threads.cpp  graphs.cpp  graphs.h  mep_chromosome.cpp  mep_chromosome.h  tsp_params.h
train/single thread/: evolve_tsp (mihai-VirtualBox's conflicted copy 2016-11-30).cpp  evolve_tsp.cpp
